# vmi-analysis

./: .gitignore  3D plot ui.py  3D plot.py  AnalysisServer.py  Beta Analysis.ipynb  Calibrate Data.ipynb  Labview Angle Generator.ipynb  Polarization Simulation.py  README.md  TPX3_read_and_convert.cpp  analyze.py  analyze_cluster.py  analyze_pdf.py  calibrations.py  circ_error_test.py  cluster.py  cluster_all.py  cluster_v3.py  cluster_v3_ ToT.py  cluster_v4.py  clustering.py  clustering_.py  coincidence.py  coincidence_analysis.py  coincidence_rotated.py  combiner.py  converter.py  cv3_analysis.py  error_bars.py  error_bars_plot.py  etof_analyze.py  get_cluster.py  get_cluster_grouped.py  get_cluster_multi_reject.py  hist_all.py  labview_integrations.py  make_calibration.ipynb  manual plot.py  monitor_run.py  niceplot.py  (+18 more)
.pylint.d/: cv3_analysis1.stats
Analysis/: 1030 Interlocking Analysis.ipynb  3D plot ui.py  3D plot.py  515 Ion Analysis.ipynb  515 Ion Analysis.py  515 Ion Intensity scan.ipynb  515 Prop Oxide Ion-Ion Coincidence.ipynb  800 Fourier Analysis.ipynb  800 Interlocking Analysis V2.ipynb  800 Interlocking Analysis.ipynb  800 resolution analysis.ipynb  Beta Analysis.ipynb  Beta Phase Analysis.ipynb  Calibrate Data.ipynb  DoG Minimum Analysis.ipynb  Fragment Analysis.ipynb  H5 Synchronous Monitor.ipynb  Hydrogen Figures.ipynb  Intensity Analysis.ipynb  Labview Angle Generator.ipynb  Mike-Style Beta Analysis.ipynb  ToF Analysis.ipynb  ToF ToA Comparison.ipynb  Trajectory Figure.ipynb  clustering.py  frag.ipynb  make_calibration.ipynb  monitor_run.py  (+5 more)
(+232 files in other folders)
