[project]
name = "vmi-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.1.0",
    "cattrs>=24.1.2",
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "plotly>=6.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "ruff>=0.9.10",
]
